--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.18.3",
     "brcypt": "^1.0.1",
     "connect-mongo": "^2.0.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
